@@ -1,4 +1,11 @@
 0.83.11
+  - You can now press Ctrl+C or Ctrl+Break to break
+    from long outputs from commands like COPY, TYPE,
+    DIR /S, and ATTRIB /S. (Wengier)
+  - DELTREE is now an external command appearing on
+    drive Z: as DELTREE.EXE instead of a builtin shell
+    command, since it is an external command in a real
+    DOS system. (Wengier).
   - Added CHCP command to view current code page, or
     change the current code page in the TrueType font
     output. Supported code pages include 437, 808, 850,
@@ -41,9 +48,13 @@
     to 437 if current codepage is different. (Wengier)
   - The setting "output=default" will enable the OpenGL
     output for the Linux platform if possible. (Wengier)
+  - Fixed an issue in MinGW builds that no data will be
+    sent to the OPL3Duo board. (DhrBaksteen)
   - Fixed that the "Save" button in Configuration Tool
     did not save config file in last version. (Wengier)
   - Integrated SVN commits (Allofich)
+    - r4330: some big endian improvents and drive_fat
+    fixes. (jmarsh)
     - r4320: Report Q-Channel track number in BCD,
     meaning it is not converted to binary by the
     CD-ROM device driver. Fixes the CD-Player feature
